--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://hbzhc.tk" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  hbzarchiv
 instagram_username: hbzmusic
+locale: "de-DE"
 
 # Build settings
 theme: minima
